arr/tautulli/tautulli-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: arr
spec:
  serviceName: tautulli
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
        - name: tautulli
          image: linuxserver/tautulli:latest
          ports:
            - containerPort: 8181
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/arr/tautulli
            server: 192.168.86.107
