arr/tautulli/tautulli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: arr
spec:
  selector:
    app: tautulli
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
