arr/tautulli/tautulli-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: arr
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.flexflix.top`)
      kind: Rule
      services:
        - name: tautulli
          port: 8181
